--- a/style.css
+++ b/style.css
@@ -18,74 +18,248 @@ body {
   place-items: center;
 }
 
-main {
-  background: url(images/background.svg);
-  width: 375px;
-  height: 812px;
+@media (min-width: 720px) {
+  /* estilos versão tablet*/
+  main {
+    background: url(images/background.svg) no-repeat center/cover;
+    width: 100vw;
+    min-height: 812px;
+    height: 100vh;
+  }
+  .avatar {
+    width: 10rem;
+    margin: 11.5rem auto;
+
+    position: relative;
+  }
+  .container {
+    max-width: 250px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+
+    color: var(--grey);
+  }
+
+  .avatar span {
+    position: absolute;
+    top: -15px;
+    /*left: 80px;*/
+    z-index: 1;
+  }
+
+  .avatar > img {
+    width: 10rem;
+    height: 11.5rem;
+    object-fit: cover;
+
+    clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+  }
+
+  h1 {
+    font-size: 1.5rem;
+
+    margin-top: -9rem;
+  }
+
+  a {
+    color: var(--grey);
+    text-decoration: none;
+
+    margin-top: 0.25rem;
+
+    display: flex;
+    gap: 0.75rem;
+
+    justify-content: center;
+    align-items: center;
+  }
+
+  p {
+    margin-top: 1rem;
+  }
+
+  ul {
+    margin-top: 4rem;
+
+    list-style: none;
+    padding: 0;
+
+    display: flex;
+    gap: 0.5rem;
+
+    justify-content: center;
+  }
 }
 
-.container {
-  max-width: 250px;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
+@media (max-width: 720px) {
+  /*estilo versão mobile*/
+  main {
+    background: url(images/background.svg) no-repeat center/cover;
+    width: 100vw;
+    min-height: 812px;
+    height: 100vh;
+  }
+  .avatar {
+    width: 10rem;
+    margin: 11.5rem auto;
 
-  color: var(--grey);
+    position: relative;
+  }
+  .container {
+    max-width: 250px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+
+    color: var(--grey);
+  }
+
+  .avatar span {
+    position: absolute;
+    top: -15px;
+    /*left: 80px;*/
+    z-index: 1;
+  }
+
+  .avatar > img {
+    width: 10rem;
+    height: 11.5rem;
+    object-fit: cover;
+
+    clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+  }
+
+  h1 {
+    font-size: 1.5rem;
+
+    margin-top: -9rem;
+  }
+
+  a {
+    color: var(--grey);
+    text-decoration: none;
+
+    margin-top: 0.25rem;
+
+    display: flex;
+    gap: 0.75rem;
+
+    justify-content: center;
+    align-items: center;
+  }
+
+  p {
+    margin-top: 1rem;
+  }
+
+  ul {
+    margin-top: 4rem;
+
+    list-style: none;
+    padding: 0;
+
+    display: flex;
+    gap: 0.5rem;
+
+    justify-content: center;
+  }
 }
 
-.avatar {
-  width: 10rem;
-  margin: 11.5rem auto;
+@media (min-width: 960px) {
+  /* estilos versão desktop*/
+  main {
+    background: url(images/backgroundDesktop.svg) no-repeat center/cover;
 
-  position: relative;
+    min-height: 920px;
+    min-width: 960px;
+  }
+
+  .avatar {
+    width: 10rem;
+    margin: 15.7rem auto;
+
+    position: relative;
+  }
+  .container {
+    max-width: 250px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+
+    color: var(--grey);
+  }
+
+  .avatar span {
+    position: absolute;
+    top: -15px;
+    /*left: 80px;*/
+    z-index: 1;
+  }
+
+  .avatar > img {
+    width: 10rem;
+    height: 11.5rem;
+    object-fit: cover;
+
+    clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+  }
+
+  h1 {
+    font-size: 1.5rem;
+
+    margin-top: -12.5rem;
+  }
+
+  a {
+    color: var(--grey);
+    text-decoration: none;
+
+    margin-top: 0.25rem;
+
+    display: flex;
+    gap: 0.75rem;
+
+    justify-content: center;
+    align-items: center;
+  }
+
+  p {
+    margin-top: 1rem;
+  }
+
+  ul {
+    margin-top: 3rem;
+
+    list-style: none;
+    padding: 0;
+
+    display: flex;
+    gap: 0.5rem;
+
+    justify-content: center;
+  }
 }
 
-.avatar span {
-  position: absolute;
-  top: -15px;
-  /*left: 80px;*/
-  z-index: 1;
+/*
+DESAFIOS
+
+* breakpoint and at rude -----------------------OK (bug no export svg)
+Ex:
+CSS
+@media (min-width: 720px){
+  /* estilos versão tablet
 }
 
-.avatar > img {
-  width: 10rem;
-  height: 11.5rem;
-  object-fit: cover;
-
-  clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+@media (min-width: 960px){
+  /* estilos versão desktop
 }
 
-h1 {
-  font-size: 1.5rem;
+* mudar cores do Figma (background) ----------- OK
 
-  margin-top: -9rem;
-}
+    azul = 240 100 50
+    verm = 360 100 50
 
-a {
-  color: var(--grey);
-  text-decoration: none;
+* add animações via CSS
 
-  margin-top: 0.25rem;
-
-  display: flex;
-  gap: 0.75rem;
-
-  justify-content: center;
-  align-items: center;
-}
-
-p {
-  margin-top: 1rem;
-}
-
-ul {
-  margin-top: 4rem;
-
-  list-style: none;
-  padding: 0;
-
-  display: flex;
-  gap: 0.5rem;
-
-  justify-content: center;
-}
+*/
